# blackjack-coach-pro-demo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
app/: __init__.py  adaptive_learning.py  cards.py  cli.py  correction_dashboard.py  correction_plan.py  counting.py  dashboard.py  decision_audit.py  decision_diagnostics.py  deviations.py  drill_generator.py  drill_history.py  ev_explainer.py  ev_history.py  explanations.py  formatting.py  guided_coach.py  hand_evaluator.py  outcome_history.py  practice_pack.py  practice_pack_history.py  practice_review.py  practice_table.py  probability_advisor.py  profile_comparison.py  quiz.py  repeat_pack.py  repeat_pack_history.py  reporting.py  review_scheduler.py  round_result.py  rules.py  session_history.py  shoe.py  simulator.py  split_rules.py  strategy_engine.py  strategy_matrix.py  web_adapter.py
docs/: BLACKJACK_COACH_KNOWLEDGE_BASE.md  COMMANDS.md  PROJECT_RULES.md  RELEASE_NOTES_v1.0.0.md  SOURCES.md
tests/: test_adaptive_learning.py  test_cards.py  test_cli.py  test_correction_dashboard.py  test_correction_plan.py  test_counting.py  test_dashboard.py  test_decision_audit.py  test_decision_diagnostics.py  test_deviations.py  test_drill_generator.py  test_drill_history.py  test_ev_explainer.py  test_ev_history.py  test_explanations.py  test_formatting.py  test_guided_coach.py  test_hand_evaluator.py  test_outcome_history.py  test_packaging.py  test_practice_pack.py  test_practice_pack_history.py  test_practice_review.py  test_practice_table.py  test_probability_advisor.py  test_profile_comparison.py  test_quiz.py  test_repeat_pack.py  test_repeat_pack_history.py  test_reporting.py  test_review_scheduler.py  test_round_result.py  test_rules.py  test_session_history.py  test_shoe.py  test_simulator.py  test_split_rules.py  test_strategy_engine.py  test_strategy_matrix.py  test_streamlit_app_interactions.py  (+2 more)
web/: __init__.py  streamlit_app.py
