[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack-coach-pro-demo"
version = "1.1.0"
description = "Educational/practice blackjack basic-strategy, Hi-Lo counting, and simulator trainer (no real betting, no casinos, no winnings promised)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["blackjack", "basic-strategy", "hi-lo", "education", "training", "cli"]
authors = [{ name = "Blackjack Coach Pro Demo contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
# The runtime uses only the Python standard library.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
blackjack-coach = "app.cli:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
